Fixing home bottom overflow

--- a/src/Components/Nav/TopNav/topnav.css
+++ b/src/Components/Nav/TopNav/topnav.css
@@ -16,7 +16,6 @@
     /* padding: 0.2rem 1.5rem 0.2rem 0; */
     font-family: var(--font-secundary);
     padding: 16px;
-    padding-left: 1rem;
 }
 
 .topNavLogo {
