--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -6,4 +6,6 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
   gap: 16px;
+  height: auto;
+  padding-bottom: 66px;
 }
